WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60514
Crash when sending a sync message to a crashed web process
https://bugs.webkit.org/show_bug.cgi?id=60514
Summary
Crash when sending a sync message to a crashed web process
Anders Carlsson
Reported
2011-05-09 16:04:15 PDT
Crash when sending a sync message to a crashed web process
Attachments
Patch
(6.11 KB, patch)
2011-05-09 16:06 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-05-09 16:06:12 PDT
Created
attachment 92876
[details]
Patch
Anders Carlsson
Comment 2
2011-05-09 16:08:20 PDT
Committed
r86101
: <
http://trac.webkit.org/changeset/86101
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug